test/compilable/test17906.d
// REQUIRED_ARGS: -de
deprecated void main ()
{
    Object o = new Object;
    delete o;
}
