test/fail_compilation/fail209.d
// 725

class X{
   float a;
}

void main(){
   X x;
   float a;

   a -= x;
}

